language/move-prover/tests/sources/functional/global_invariants.exp
Move prover returns: exiting with boogie verification errors
error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:38: create_R_invalid
    =         account = <redacted>
    =     at tests/sources/functional/global_invariants.move:40: create_R_invalid
    =     at tests/sources/functional/global_invariants.move:38: create_R_invalid
    =     at tests/sources/functional/global_invariants.move:40: create_R_invalid
    =     at tests/sources/functional/global_invariants.move:18

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:20:9 ───
    │
 20 │         invariant update [global] forall a: address where old(exists_R(a)): exists<R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:62: remove_R_invalid
    =         account = <redacted>
    =     at tests/sources/functional/global_invariants.move:64: remove_R_invalid
    =         <redacted> = <redacted>
    =     at tests/sources/functional/global_invariants.move:62: remove_R_invalid
    =     at tests/sources/functional/global_invariants.move:65: remove_R_invalid
    =     at tests/sources/functional/global_invariants.move:18
    =     at tests/sources/functional/global_invariants.move:20

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:53: remove_S_invalid
    =         account = <redacted>
    =     at tests/sources/functional/global_invariants.move:55: remove_S_invalid
    =         <redacted> = <redacted>
    =     at tests/sources/functional/global_invariants.move:18
